back and frontend apis added with api call tests
